# embd

./: Makefile  README.md  pyproject.toml
src/embd/: __init__.py  bytes.py  embed.py  space.py  types.py
src/mbds/: __init__.py  space.py  types.py
tests/: test_embed.py
