[project]
name = "embd"
version = "0.0.6"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix embedding driver for software 2.0"
dependencies = [
    "pytest",
    "sentence_transformers",
    "is_instance",
    "assure",
    "mmry >= 0.0.3",
]

[project.urls]
source = "https://github.com/notarealdeveloper/embd"
download = "https://pypi.org/project/embd/#files"

[project.scripts]
think = "embd.bin.think:main"
