[project]
name = "embd"
version = "0.0.9"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix embedding driver for software 2.0"
dependencies = [
    "pytest",
    "sentence_transformers",
    "is_instance >= 0.0.5",
    "assure",
    "mmry >= 0.0.5",
]

[project.urls]
source = "https://github.com/notarealdeveloper/embd"
download = "https://pypi.org/project/embd/#files"

[project.scripts]
think = "embd.bin.think:main"
